--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":" node app.js"
+    "start": " node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,9 +15,7 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.10",
     "node-fetch": "^3.0.0",
-    "nodemon": "^2.0.13",
-    "redis": "^3.1.2",
-    "zookeeper": "^4.10.0"
+    "nodemon": "^2.0.13"
   },
   "keywords": [],
   "description": ""
