--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "stm32-for-vscode.openOCDPath": false,
     "stm32-for-vscode.makePath": false,
-    "stm32-for-vscode.armToolchainPath": false
+    "stm32-for-vscode.armToolchainPath": false,
+    "appService.defaultWebAppToDeploy": "/subscriptions/43d9b932-aa1e-42cf-abdf-bec8e26f1bb0/resourceGroups/appsvc_linux_centralus/providers/Microsoft.Web/sites/tinyFy-shashank",
+    "appService.deploySubpath": "."
 }
