--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": " node app.js"
   },
-  "author": "",
+  "author": "Shashank",
   "license": "ISC",
   "dependencies": {
     "base62": "^2.0.1",
@@ -18,5 +18,14 @@
     "nodemon": "^2.0.13"
   },
   "keywords": [],
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/shashankkmciv18/tinyFy.git"
+  },
+  "bugs": {
+    "url": "https://github.com/shashankkmciv18/tinyFy/issues"
+  },
+  "homepage": "https://github.com/shashankkmciv18/tinyFy#readme",
   "description": ""
 }
